Refactor CommandTest